-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.1, 5.4.0 Alpha
-
OS X 10.9, Intel HD 3000
-
-
8f41c817558a42134e93f51124a433d6acaffbab
Run the quick widget example with --multisample. Then resize the QQuickWidget. The result is some terrible flicker. It is not present when running without multisampling.
- is duplicated by
-
QTBUG-46788 QOpenGLWidget and QSurfaceFormat::setSamples are not really good friends
-
- Closed
-
- relates to
-
QTBUG-39919 QQuickWidget shows garbage in first frame on OS X
-
- Closed
-
- resulted in
-
QTBUG-44876 QQuickWidget: QQuickRootItem is not resized
-
- Open
-
| For Gerrit Dashboard: QTBUG-39917 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 108062,3 | Re-enable readback test in tst_qquickwidget | 5.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 108063,2 | Add missing flush for multisampled QQuickWidget | 5.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 108064,2 | Add missing flush for multisampled QOpenGLWidget | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |