Add missing flush for multisampled QQuickWidget

Otherwise we might be using a half-ready texture when performing compositing.
The issue was very visible on OS X at least.

Task-number: QTBUG-39917
Change-Id: I71326cb99567f458a6ca7a2cad322a315ee6674f
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>